test/shared/applications/valid/withDirectories/data/server/domain/sampleContext/sampleAggregate/index.js
'use strict';

const commands = require('./commands'),
      events = require('./events'),
      initialState = require('./initialState');

module.exports = { initialState, commands, events };
